Flutter AOT build and static analysis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_script:
   - ./flutter/bin/flutter doctor
 script:
   - ./flutter/bin/flutter test
+  - ./flutter/bin/flutter build aot
+  - ./flutter/bin/flutter build analyze  
 cache:
   directories:
     - $HOME/.pub-cache
