--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   material_pickers: "^0.0.2"
+  color: ^2.0.2
 
 
 dev_dependencies:
