--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   material_pickers: "^0.0.2"
+  font_awesome_flutter: 6.0.0
 
 
 dev_dependencies:
@@ -32,6 +33,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/color.png
+    - assets/bridge_and_router.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
