--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  material_pickers: "^0.0.2"
   color: ^2.0.2
   font_awesome_flutter: 6.0.0
+  flutter_colorpicker: "^0.0.4"
+
 
 
 dev_dependencies:
